<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VisitingPlace</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="title">Visiting Place</string>
    <string name="subtitle">Want To Visite</string>
    <string name="create">Create Profile</string>
    <string name="detail">Detail Information</string>
    
    <string name="name">Name</string>
    <string name="purpose">Purpose</string>
    <string name="address">Address</string>
    <string name="district">District</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="start">Start Date</string>
    <string name="end">End Date</string>
    <string name="time">Time</string>
    <string name="note">Note</string>
    
    <string name="save">Save</string>
    <string name="addmore">Add More</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="showmap">Show in Map</string>
    
    <string name="insert">Data inserted</string>
    <string name="fail">Data insertion failed</string>

</resources>
